[package]
name = "bit_field"
version = "0.4.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "Apache-2.0/MIT"

description = "Simple bit field trait providing get_bit, get_range, set_bit, and set_range methods for unsigned integers."
keywords = ["no_std"]
repository = "https://github.com/phil-opp/rust-bit-field"
documentation = "https://docs.rs/bit_field"

[dependencies]
